--- a/templates/index.jade
+++ b/templates/index.jade
@@ -9,32 +9,42 @@ body
             ul.side-nav
                 each group in data
                     if group.name
-                        li.heading= group.name
+                        li.heading
+                            h3= group.name
                     each item in group.items
                         li
                             a(href="#" + item.name)!= item.name
-    div.content
-        each group in data
-            each item in group.items
-                h2(id=item.name)!= item.name
-                p!= item.description.full
-                each tag in item.tags
-                    if tag.type == "example"
-                        h5 Example
-                        pre!= tag.string
-                h5 Arguments
-                table.arguments
+    div.content-wrap
+        div.content
+            each group in data
+                if group.name.length
+                    h1.groupname!= group.name
+                if group.text.length
+                    p!= group.text
+                each item in group.items
+                    h2(id=item.name)!= item.name
+                    p!= item.description.full
                     each tag in item.tags
-                        if tag.type == "param" || tag.type == "property"
-                            tr
-                                td!= tag.name
-                                td!= tag.types && tag.types.join(", ")
-                                td!= tag.description
-                if item.ctx.type == "function"
-                    h5 Returns
+                        if tag.type == "example"
+                            h3 Example
+                            pre!= tag.string
+                    h3 Arguments
+                    table.arguments
+                        tr
+                            th Name
+                            th Type
+                            th Description
+                        each tag in item.tags
+                            if tag.type == "param" || tag.type == "property"
+                                tr
+                                    td!= tag.name
+                                    td!= tag.types && tag.types.join(", ")
+                                    td!= tag.description
+                    if item.ctx.type == "function"
+                        h3 Returns
                         each tag in item.tags
                             if tag.type == "return" || tag.type == "returns"
                                 p
                                     | Type - 
                                     != tag.types.join(", ")
-                        
+                            
