--- a/stylesheets/documentation.css
+++ b/stylesheets/documentation.css
@@ -24,6 +24,11 @@ h3 {
     font-size: 30px;
 }
 
+h4 {
+    font-size: 20px;
+    margin: 10px 0 5px 0;
+}
+
 a {
     color: rgb(0, 140, 220);
 }
@@ -52,10 +57,6 @@ a {
 
 .sidebar li:before {
     content: "- ";
-}
-
-.sidebar li.heading h3 {
-    margin: 10px 0 5px 0;
 }
 
 .sidebar li.heading:before {
