--- a/solarized.css
+++ b/solarized.css
@@ -1,7 +1,108 @@
-<!DOCTYPE html><head><link rel="stylesheet" href="/Users/evindor/Sites/reza/node_modules/doxi/node_modules/normalize.css/normalize.css"><link rel="stylesheet" href="/Users/evindor/Sites/reza/node_modules/doxi/stylesheets/solarized.css"><link rel="stylesheet" href="/Users/evindor/Sites/reza/node_modules/doxi/stylesheets/documentation.css"></head><body id="Doxi"><div class="sidebar"><h1 class="label"><a href="#Doxi">Doxi</a></h1><nav><ul class="side-nav"><li class="heading"><h4><a href="#Installation">Installation</a></h4></li><li class="heading"><h4><a href="#Options">Options</a></h4></li><li class="heading"><h4><a href="#Usage instructions">Usage instructions</a></h4></li></ul></nav></div><div class="content-wrap"><div class="content"><span><p><h1 style="text-align: center; margin-bottom: 10px;">Doxi</h1></p><p><h2 style="text-align: center; margin-top: 0;">Document your API from code</h1><br />Doxi is intended to help you build a great single page documentation for your API.</p><p>Document your API with JSDoc right inside your code.</p><p>Join your JSDoc comments from all your files into logical groups.</p><p>Use markdown.</p><p>Be awesome!</p></span><h1 id="Installation" class="groupname">Installation</h1><p><pre><code>npm install --save doxi
-</code></pre></p><h2 id=""></h2><p><p>&nbsp;</p></p><h1 id="Options" class="groupname">Options</h1><h2 id=""></h2><p><p>Doxi is configurable through a set of options:</p></p><h3>Arguments</h3><table class="arguments"><tr><th>Name</th><th>Type</th><th>Description</th></tr><tr><td>template</td><td>string</td><td>path to your custom template</td></tr><tr><td>heading</td><td>string</td><td>label to display in top left corner</td></tr><tr><td>stylesheets</td><td>Array</td><td>list of paths to stylesheets you want to be included</td></tr></table><h1 id="Usage instructions" class="groupname">Usage instructions</h1><h2 id=""></h2><p><p>For now Doxi can be used only with gulp.</p></p><h3>Example</h3><pre>    gulp.task(<span class="hljs-string">'default'</span>, <span class="hljs-function"><span class="hljs-keyword">function</span><span class="hljs-params">()</span> </span>{
-        gulp.src(<span class="hljs-string">'./lib/doxi.js'</span>)
-            .pipe(doxi(<span class="hljs-string">'index.html'</span>, {template: <span class="hljs-string">'./templates/index.jade'</span>}))
-            .pipe(gulp.dest(<span class="hljs-string">'./'</span>));
-    });
-</pre></div></div></body>
+/*
+
+Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmail.com>
+
+*/
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #fdf6e3;
+  color: #657b83;
+}
+
+.hljs-comment,
+.hljs-template_comment,
+.diff .hljs-header,
+.hljs-doctype,
+.hljs-pi,
+.lisp .hljs-string,
+.hljs-javadoc {
+  color: #93a1a1;
+}
+
+/* Solarized Green */
+.hljs-keyword,
+.hljs-winutils,
+.method,
+.hljs-addition,
+.css .hljs-tag,
+.hljs-request,
+.hljs-status,
+.nginx .hljs-title {
+  color: #859900;
+}
+
+/* Solarized Cyan */
+.hljs-number,
+.hljs-command,
+.hljs-string,
+.hljs-tag .hljs-value,
+.hljs-rules .hljs-value,
+.hljs-phpdoc,
+.tex .hljs-formula,
+.hljs-regexp,
+.hljs-hexcolor,
+.hljs-link_url {
+  color: #2aa198;
+}
+
+/* Solarized Blue */
+.hljs-title,
+.hljs-localvars,
+.hljs-chunk,
+.hljs-decorator,
+.hljs-built_in,
+.hljs-identifier,
+.vhdl .hljs-literal,
+.hljs-id,
+.css .hljs-function {
+  color: #268bd2;
+}
+
+/* Solarized Yellow */
+.hljs-attribute,
+.hljs-variable,
+.lisp .hljs-body,
+.smalltalk .hljs-number,
+.hljs-constant,
+.hljs-class .hljs-title,
+.hljs-parent,
+.haskell .hljs-type,
+.hljs-link_reference {
+  color: #b58900;
+}
+
+/* Solarized Orange */
+.hljs-preprocessor,
+.hljs-preprocessor .hljs-keyword,
+.hljs-pragma,
+.hljs-shebang,
+.hljs-symbol,
+.hljs-symbol .hljs-string,
+.diff .hljs-change,
+.hljs-special,
+.hljs-attr_selector,
+.hljs-subst,
+.hljs-cdata,
+.clojure .hljs-title,
+.css .hljs-pseudo,
+.hljs-header {
+  color: #cb4b16;
+}
+
+/* Solarized Red */
+.hljs-deletion,
+.hljs-important {
+  color: #dc322f;
+}
+
+/* Solarized Violet */
+.hljs-link_label {
+  color: #6c71c4;
+}
+
+.tex .hljs-formula {
+  background: #eee8d5;
+}
