--- a/templates/index.jade
+++ b/templates/index.jade
@@ -49,11 +49,14 @@ body(id=heading)
                                         td!= tag.name
                                         td!= tag.types && tag.types.join(", ")
                                         td!= tag.description
-                        if item.ctx && item.ctx.type == "function"
+                        if item.hasReturns
                             h3 Returns
                             each tag in item.tags
                                 if tag.type == "return" || tag.type == "returns"
                                     p
                                         | Type - 
                                         != tag.types.join(", ")
+                                        if tag.description
+                                            br
+                                            != tag.description
                                 
