add title option

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,5 +1,6 @@
 doctype html
 head
+    title= title
     each stylesheet in stylesheets
         link(rel="stylesheet", href=stylesheet)
 body(id=heading)
