--- a/documentation.css
+++ b/documentation.css
@@ -18,10 +18,12 @@ h1 {
 
 h2 {
     font-size: 40px;
+    margin-bottom: 15px;
 }
 
 h3 {
     font-size: 30px;
+    margin-bottom: 10px;
 }
 
 h4 {
@@ -104,6 +106,7 @@ pre {
     background-color: #FAFAFA;
     padding: 1rem;
     font-family: "Inconsolata", monospace;
+    margin-top: 10px;
 }
 
 .content td,
